fix(tabs): add dark mode variables

--- a/tegel/src/components/tabs/inline-tabs-fullbleed/inline-tabs-fullbleed.scss
+++ b/tegel/src/components/tabs/inline-tabs-fullbleed/inline-tabs-fullbleed.scss
@@ -132,7 +132,7 @@
     }
   }
   
-  ::slotted(.sdds-inline-tabs-fullbleed--tab__active) {
+  ::slotted(&--tab__active) {
     color: var(--sdds-inline-tabs-fullbleed-tab-active-color);
     opacity:1;
 
