--- a/tegel/src/components/tabs/navigation-tabs/navigation-tabs-theme-vars.scss
+++ b/tegel/src/components/tabs/navigation-tabs/navigation-tabs-theme-vars.scss
@@ -1,23 +1,43 @@
 :root,
 .sdds-theme-light {
-  --sdds-navigation-tabs-bg: var(--sdds-white);
-
-  /* Horizontal divider */
-  --sdds-navigation-tabs-horizontal-divider-bg: var(--sdds-grey-300);
+ /* Horizontal divider */
+ --sdds-navigation-tabs-horizontal-divider-bg: var(--sdds-blue-900);
+ --sdds-navigation-tabs-horizontal-divider-opacity: 0.16;
+ --sdds-navigation-tabs-bg: var(--sdds-white);
 
   /* Scroll button */
-  --sdds-navigation-tabs-scroll-btn-bg: var(--sdds-grey-50);
-  --sdds-navigation-tabs-scroll-btn-hover-bg: var(--sdds-grey-300);
-  --sdds-navigation-tabs-scroll-btn-active-bg: var(--sdds-grey-400);
+ --sdds-navigation-tabs-scroll-btn-bg: var(--sdds-grey-50);
+ --sdds-navigation-tabs-scroll-btn-hover-bg: var(--sdds-grey-300);
+ --sdds-navigation-tabs-scroll-btn-active-bg: var(--sdds-grey-400);
 
   /* Tab */
-  --sdds-navigation-tabs-tab-hover-indicator-bg: var(--sdds-grey-400);
-  --sdds-navigation-tabs-tab-hover-color: var(--sdds-grey-958);
-  --sdds-navigation-tabs-tab-focus-color: var(--sdds-grey-958);
-  --sdds-navigation-tabs-tab-active-color: var(--sdds-grey-958);
-  --sdds-navigation-tabs-tab-active-indicator-bg: var(--sdds-blue-400);
+ --sdds-navigation-tabs-tab-color: var(--sdds-grey-900);
+ --sdds-navigation-tabs-tab-color-disabled: var(--sdds-blue-900);
+ --sdds-navigation-tabs-tab-color-disabled-opacity: 0.60;
+ --sdds-navigation-tabs-tab-hover-indicator-bg: #D1D5DB;
+ --sdds-navigation-tabs-tab-hover-color: var(--sdds-grey-958);
+ --sdds-navigation-tabs-tab-focus-color: var(--sdds-grey-958);
+ --sdds-navigation-tabs-tab-active-color: var(--sdds-grey-958);
+ --sdds-navigation-tabs-tab-active-indicator-bg: var(--sdds-blue-400);
 }
 
 .sdds-theme-dark {
-  //todo
+  --sdds-navigation-tabs-horizontal-divider-bg: var(--sdds-blue-100);
+ --sdds-navigation-tabs-horizontal-divider-opacity: 0.24;
+ --sdds-navigation-tabs-bg: var(--sdds-grey-900);
+
+  /* Scroll button */
+ --sdds-navigation-tabs-scroll-btn-bg: var(--sdds-grey-800);
+ --sdds-navigation-tabs-scroll-btn-hover-bg: var(--sdds-grey-900);
+ --sdds-navigation-tabs-scroll-btn-active-bg: var(--sdds-grey-900);
+
+  /* Tab */
+ --sdds-navigation-tabs-tab-color: var(--sdds-blue-50);
+ --sdds-navigation-tabs-tab-color-disabled: var(--sdds-blue-50);
+ --sdds-navigation-tabs-tab-color-disabled-opacity: 0.38;
+ --sdds-navigation-tabs-tab-hover-indicator-bg: var(--sdds-blue-100);
+ --sdds-navigation-tabs-tab-hover-color: var(--sdds-grey-50);
+ --sdds-navigation-tabs-tab-focus-color: var(--sdds-grey-50);
+ --sdds-navigation-tabs-tab-active-color: var(--sdds-grey-50);
+ --sdds-navigation-tabs-tab-active-indicator-bg: var(--sdds-blue-300);
 }
